# BelfryCAD

./: .cursorrules  .gitignore  ARCCTR_SECONDARY_KEY_FIX.md  ARC_SHORTCUTS_UPDATE.md  ARC_TOOL_CONSOLIDATION.md  CIRCLE_SHORTCUTS_UPDATE.md  CLAUDE.md  CONIC_TOOLS_ARCS_UPDATE.md  CONVERSION_PROGRESS.md  CONVERSION_SUMMARY.md  COORDINATE_SCALING_MIGRATION_COMPLETE.md  CTRL_ZOOM_COMPLETE.md  DRAWING_MANAGER_COMPLETION_SUMMARY.md  ELLIPSE_SHORTCUTS_UPDATE.md  KEYBOARD_SHORTCUTS.md  LANGUAGE.md  LAYER_TRANSLATION_COMPLETE.md  LETTER_SHORTCUTS_COMPLETED.md  LICENSE  MANIFEST.in  MULTITOUCH_SCROLLING_COMPLETE.md  README.md  README.rst  SNAPS_SYSTEM_README.md  cleanup_test_files.py  cleanup_test_files_now.py  complex_test_document.belcad  complex_test_document.belcadx  complex_test_document_formatted.xml  debug_arcctr_key.py  debug_grid.py  debug_serialization.py  demonstrate_grid.py  dev.sh  execute_move_tests.py  final_demo.py  final_verification_test.py  getItemsByTags_usage_examples.py  grid_fix_verification.py  grid_implementation_summary.py  (+87 more)
.github/: ai.md
BelfryCAD/: app.py  config.py
dev_docs/: ARC_SPAN_ANGLE_FIX.md  ARC_TOOL_CONSOLIDATION.md  ARC_XML_FORMAT_UPDATE.md  BELCADX_FORMAT_IMPLEMENTATION.md  BEZIER_PATH_CONVERSION.md  CAD_OBJECT_API_STANDARDIZATION.md  CAD_OBJECT_DOCUMENT_ARGUMENT_STANDARDIZATION.md  CAD_OBJECT_NAMING_IMPLEMENTATION.md  CIRCULAR_IMPORT_FIX_COMPLETE.md  COMPLETE_GRID_SYSTEM_SUMMARY.md  COMPLEX_TEST_DOCUMENT_CONSTRAINTS.md  COMPLEX_TEST_DOCUMENT_CREATION.md  CONSTRAINTS_MANAGER_COMPLETION_SUMMARY.md  CONSTRAINTS_MANAGER_IMPLEMENTATION.md  CONSTRAINT_GRAPH_COMPLETION_SUMMARY.md  CONSTRAINT_GRAPH_IMPLEMENTATION.md  CONSTRAINT_SYSTEM_GRANULAR_UPDATE.md  CONSTRUCTION_DRAWING_FINAL_RESOLUTION.md  CONSTRUCTION_DRAWING_FIX_COMPLETE.md  (+56 more)
(+541 files in other folders)
